Ammended margin value on .content common class to only produce margin-top removing odd overflow occurence bug

--- a/Milestone4/static/css/style.css
+++ b/Milestone4/static/css/style.css
@@ -140,7 +140,7 @@ footer .row {
 /* Global page elements */
 
 .content {
-    margin: 77px auto 0;
+    margin-top: 77px;
     -webkit-box-flex: 1;
             -ms-flex: 1;
                 flex: 1;
